src/main/java/com/example/demo/exceptions/errors/InvalidMessageException.java
package com.example.demo.exceptions.errors;

public class InvalidMessageException extends RuntimeException {
    public InvalidMessageException(String message) {
        super(message);
    }

    public InvalidMessageException() {
    }
}
